--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 	<section id="profile">
 			<div class="profile-block">
 				<img class="img-circle" src="assets/img/logo.png" width="200" height="200" class="mb-7 profile-image">
-				<p>Hello, I'm Sam. I'm a PhD student and I want to help humanity with AI.<br/>
-				Can we use deep reinforcement learning to teach a machine to empathize with people?<br/>
-				What are the social and cultural implications of a fully automated world?</p>
+				<p>Hello, I'm Sam. a PhD student at the University of Rochester. I want to help humanity with AI.<br/>
+				    Can we use deep reinforcement learning to teach a machine to empathize with people?<br/>
+				    What are the social and cultural implications of a fully automated world?<br/>
+                    These are the questions I am seeking to answer in my research.</p>
 			</div>
 		<a href="index.html#contact" class="scroll"><span class="down-arrow"></span></a>
 	</section>
