--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<section id="profile">
 			<div class="profile-block">
 				<img class="img-circle" src="assets/img/logo.png" width="200" height="200" class="mb-7 profile-image">
-				<p>Hello, I'm Sam. a PhD student at the University of Rochester. I want to help humanity with AI.<br/>
+				<p>Hello, I'm Sam, a PhD student at the University of Rochester. I want to help humanity with AI.<br/>
 				    Can we use deep reinforcement learning to teach a machine to empathize with people?<br/>
 				    What are the social and cultural implications of a fully automated world?<br/>
                     These are the questions I am seeking to answer in my research.</p>
