--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 				<p>Hello, I'm Sam, a PhD student at the University of Rochester. I want to help humanity with AI.<br/>
 				    Can we use deep reinforcement learning to teach a machine to empathize with people?<br/>
 				    What are the social and cultural implications of a fully automated world?<br/>
-                    These are the questions I am seeking to answer in my research.</p>
+                    These are the questions I am seeking to answer in my research.<br/>
+                    See IRTG project proposal <a href="IRTG Project Proposal.pdf">here</a>.</p>
 			</div>
 		<a href="index.html#contact" class="scroll"><span class="down-arrow"></span></a>
 	</section>
