Added IRTG project proposal

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				    Can we use deep reinforcement learning to teach a machine to empathize with people?<br/>
 				    What are the social and cultural implications of a fully automated world?<br/>
                     These are the questions I am seeking to answer in my research.<br/>
-                    See IRTG project proposal <a href="IRTG Project Proposal.pdf">here</a>.</p>
+                    See ITRG project proposal <a href="IRTG Project Proposal.pdf">here</a>.</p>
 			</div>
 		<a href="index.html#contact" class="scroll"><span class="down-arrow"></span></a>
 	</section>
