--- a/index.html
+++ b/index.html
@@ -33,12 +33,28 @@
 	<section id="profile">
 			<div class="profile-block">
 				<img class="img-circle" src="assets/img/logo.png" width="200" height="200" class="mb-7 profile-image">
-				<p>Hello, I'm Sam, a PhD student at the University of Rochester. I want to help humanity with AI.<br/>
-				    Can we use deep reinforcement learning to teach a machine to empathize with people?<br/>
-				    What are the social and cultural implications of a fully automated world?<br/>
-                    These are the questions I am seeking to answer in my research.<br/>
-                    See my ITRG project proposal <a href="IRTG Project Proposal.pdf"
-                                                    style="text-decoration: underline;">here</a>.</p>
+				<!--<p>Hello, I'm Sam, a PhD student at the University of Rochester. I want to help humanity with AI.<br/>-->
+				    <!--Can we use deep reinforcement learning to teach a machine to empathize with people?<br/>-->
+				    <!--What are the social and cultural implications of a fully automated world?<br/>-->
+                    <!--These are the questions I am seeking to answer in my research.<br/>-->
+                    <!--See my ITRG project proposal <a href="IRTG Project Proposal.pdf"-->
+                                                    <!--style="text-decoration: underline;">here</a>.</p>-->
+				<p>Hello, I'm Sam.<br/>
+					I research Artificial Intelligence at the <a href="https://www.cs.rochester.edu/graduate/phd-program.html">University of Rochester</a> as a PhD student<br/>
+					and <a href="http://www.rochester.edu/newscenter/undergraduate-students-place-in-top-three-in-parkinsons-disease-data-science-contest-228912/">assist at URMC</a> with machine learning to <a href="http://samlerman.com:5001">model the progression of Parkinson's disease</a>.<br/>
+					My main research focus is reinforcement learning, which is the process by which an intelligent agent,<br/>
+					such as a character in a video game, a self driving car, or a robot, <br/>
+					learns from experience how to act and behave in an environment,<br/>
+					much as a baby learns over time how to walk or talk or read or create.<br/>
+					To me, it is an element of my <a href="https://en.wikipedia.org/wiki/Philosophy_of_artificial_intelligence">journey into understanding consciousness</a><br/>
+					and through that end, connecting with the divine.<br/>
+					I am funded by <a href="https://www.nsf.gov">NSF Research Training</a>, an interdisciplinary program between AI and brain and cognitive science.<br/>
+					Therefore my research is heavily inspired by the brain. <br/>
+					My other academic interests include psychology, comparative myth, and philosophy,<br/>
+					and I personally enjoy film making, creative writing, and the outdoors.<br/>
+					It is my aspiration in my career to solve general intelligence &mdash; and all of mankind's woes.<br/>
+					;)
+				</p>
 			</div>
 		<a href="index.html#contact" class="scroll"><span class="down-arrow"></span></a>
 	</section>
