--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
 	
 	<section id="contact">
 		<div class="container">
-			<p><a href="https://www.cs.rochester.edu/"><i class="facebook fa fa-home"></i></a>
-                <a href="https://github.com/slerman12"><i class="dribbble fa fa-github"></i></a>
+			<p>
+
+                <a href="https://www.cs.rochester.edu/"><i class="facebook fa fa-home"></i></a>
                 <a href="tel:+1-585-290-2381"><i class="twitter fa fa-phone"></i></a>
                 <a href="mailto:slerman@ur.rochester.edu?Subject=CS%20webpage%20mail"><i class="mail fa fa-envelope"></i></a>
+                <a href="https://github.com/slerman12"><i class="dribbble fa fa-github"></i></a>
 			</p>
 
 		</div>
