--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					much as a baby learns over time how to walk or talk or read or create.<br/>
 					To me, it is an element of my <a href="https://en.wikipedia.org/wiki/Philosophy_of_artificial_intelligence">journey into understanding consciousness</a><br/>
 					and through that end, connecting with the divine.<br/>
-					I am funded by <a href="https://www.nsf.gov">NSF Research Training</a>, an interdisciplinary program between AI and brain and cognitive science.<br/>
+					I am funded by <a href="https://www.nsf.gov">NSF Research Training</a> in an interdisciplinary program between AI and brain and cognitive science.<br/>
 					Therefore my research is heavily inspired by the brain. <br/>
 					My other academic interests include psychology, comparative myth, and philosophy,<br/>
 					and I personally enjoy film making, creative writing, and the outdoors.<br/>
