--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					I research Artificial Intelligence at the <a href="https://www.cs.rochester.edu/graduate/phd-program.html">University of Rochester</a> as a PhD student<br/>
 					and <a href="http://www.rochester.edu/newscenter/undergraduate-students-place-in-top-three-in-parkinsons-disease-data-science-contest-228912/">assist at URMC</a> with machine learning to <a href="http://samlerman.com:5001">model the progression of Parkinson's disease</a>.<br/>
 					My main research focus is reinforcement learning, which is the process by which an intelligent agent,<br/>
-					such as a character in a video game, a self driving car, or a robot, <br/>
+					such as a self driving car, a character in a video game, or a robot, <br/>
 					learns from experience how to act and behave in an environment,<br/>
 					much as a baby learns over time how to walk or talk or read or create.<br/>
 					To me, it is an element of my <a href="https://en.wikipedia.org/wiki/Philosophy_of_artificial_intelligence">journey into understanding consciousness</a><br/>
