--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					and likewise my research is heavily inspired by the brain. <br/>
 					My other academic interests include psychology, comparative myth, and philosophy,<br/>
 					and I personally enjoy film making, creative writing, and the outdoors.<br/>
-					It is my aspiration in my career to solve general intelligence &mdash; and all of mankind's woes.<br/>
+					My aspiration in my career is to solve general intelligence &mdash; and all of mankind's woes.<br/>
 					;)
 				</p>
 			</div>
