--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 					learns from experience how to act and behave in an environment,<br/>
 					much as a baby learns over time how to walk or talk or read or create.<br/>
 					To me, this research is an element of my <a href="https://en.wikipedia.org/wiki/Philosophy_of_artificial_intelligence">journey into understanding consciousness</a><br/>
-					and through that end, connecting with the divine.<br/>
+					and, through that end, connecting with the divine.<br/>
 					I am funded by <a href="https://www.nsf.gov">NSF Research Training</a> in an interdisciplinary program between AI and Brain and Cognitive Sciences,<br/>
 					and likewise my research is heavily inspired by the brain. <br/>
 					My other academic interests include psychology, comparative myth, and philosophy,<br/>
 					and I personally enjoy film making, creative writing, and the outdoors.<br/>
 					My aspiration in my career is to solve general intelligence &mdash; and all of mankind's woes.<br/>
-					;)
+					:)
 				</p>
 			</div>
 		<a href="index.html#contact" class="scroll"><span class="down-arrow"></span></a>
