--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					learns from experience how to act and behave in an environment,<br/>
 					much as a baby learns over time how to walk or talk or read or create.<br/>
 					To me, this research is an element of my <a href="https://en.wikipedia.org/wiki/Philosophy_of_artificial_intelligence">journey into understanding consciousness</a><br/>
-					and, through that end, a spirited adventure of connecting with the divine.<br/>
+					and, through that end, a spirited adventure of meeting the divine.<br/>
 					Fortuitously, I am part of <a href="https://www.nsf.gov">NSF Research Training</a>, an interdisciplinary program between AI and Brain and Cognitive Sciences,<br/>
 					and likewise my research is heavily inspired by the brain. <br/>
 					My other academic interests include psychology, comparative myth, and philosophy,<br/>
