--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 				<p>Hello, I'm Sam.<br/>
 					I research Artificial Intelligence at the <a href="https://www.cs.rochester.edu/graduate/phd-program.html">University of Rochester</a> as a PhD student<br/>
 					and <a href="http://www.rochester.edu/newscenter/undergraduate-students-place-in-top-three-in-parkinsons-disease-data-science-contest-228912/">assist at URMC</a> with <a href="http://samlerman.com:5001">modeling the progression of Parkinson's disease</a>.<br/>
-					My passion is reinforcement learning, which is the process by which an intelligent agent,<br/>
+					My passion is reinforcement learning, the process by which an intelligent agent<br/>
 					such as a self driving car, a character in a video game, or a robot, <br/>
-					learns from experience how to act and behave in an environment,<br/>
-					much as a baby learns over time how to walk or talk or read or create.<br/>
-					To me, this research is an element of my <a href="https://en.wikipedia.org/wiki/Philosophy_of_artificial_intelligence">journey into understanding consciousness</a><br/>
-					and, through that end, a spirited adventure of meeting the divine.<br/>
-					Fortuitously, I am part of <a href="https://www.nsf.gov">NSF Research Training</a>, an interdisciplinary program between AI and Brain and Cognitive Sciences,<br/>
+					learns from experience how to act and behave in an environment.<br/>
+					Much as a baby learns over time how to walk or talk or read or create.<br/>
+					To me, this research is a <a href="https://en.wikipedia.org/wiki/Philosophy_of_artificial_intelligence">journey into understanding consciousness</a><br/>
+					and through that end a spirited adventure of meeting the divine.<br/>
+					I am part of <a href="https://www.nsf.gov">NSF Research Training</a>, which is an interdisciplinary program between AI and Brain and Cognitive Sciences,<br/>
 					and likewise my research is heavily inspired by the brain. <br/>
 					My other academic interests include psychology, comparative myth, and philosophy,<br/>
 					and I personally enjoy film making, creative writing, and the outdoors.<br/>
