--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 					such as a self driving car, a character in a video game, or a robot, <br/>
 					learns from experience how to act and behave in an environment.<br/>
 					(Much as a baby learns over time how to walk or talk or read or create).<br/>
-					To me, this research is a <a href="https://en.wikipedia.org/wiki/Philosophy_of_artificial_intelligence">journey into understanding consciousness</a> and through that end a spirited adventure of meeting the divine!<br/>
+					To me, this research is a <a href="https://en.wikipedia.org/wiki/Philosophy_of_artificial_intelligence">journey into understanding consciousness</a> and the brain,<br/>
+                    and through that end a spirited adventure of meeting the divine.<br/>
 					I am part of <a href="https://www.nsf.gov">NSF Research Training</a>, which is an interdisciplinary program between AI and Brain and Cognitive Sciences,<br/>
 					and likewise my research is heavily inspired by the brain. <br/>
 					My other academic interests include psychology, comparative myth, and philosophy,<br/>
