--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					and likewise my research is heavily inspired by the brain. <br/>
 					Additionally, I love to study psychology, comparative myth, and philosophy,<br/>
 					and I personally enjoy film making, creative writing, and the outdoors.<br/>
-					My aspiration in my career is to solve general intelligence &mdash; and all of mankind's woes.<br/>
+					My aspiration in my career is to solve general intelligence &mdash; and then all of mankind's woes.<br/>
 					:)
 				</p>
 			</div>
