--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     and through that end a spirited adventure of meeting the divine.<br/>
 					I am part of <a href="https://www.nsf.gov">NSF Research Training</a>, which is an interdisciplinary program between AI and Brain and Cognitive Sciences,<br/>
 					and likewise my research is heavily inspired by the brain. <br/>
-					Additionally, I love to study psychology, comparative myth, and philosophy,<br/>
+					In addition, I love to study psychology, comparative myth, and philosophy,<br/>
 					and I personally enjoy film making, creative writing, and the outdoors.<br/>
 					My aspiration in my career is to solve general intelligence &mdash; and then all of mankind's woes.<br/>
 					:)
