--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					(Much as a baby learns over time how to walk or talk or read or create).<br/>
 					To me, this research is a <a href="https://en.wikipedia.org/wiki/Philosophy_of_artificial_intelligence">journey into understanding consciousness</a> and the mind,<br/>
                     and through that end a spirited adventure of meeting the divine.<br/>
-					I am part of <a href="https://www.nsf.gov">NSF Research Training</a>, which is an interdisciplinary program between AI and Brain and Cognitive Sciences,<br/>
+					I am part of <a href="http://www.sas.rochester.edu/dsc/graduate/nrt-projects/index.html">NSF Research Training</a>, which is an interdisciplinary program between AI and Brain and Cognitive Sciences,<br/>
 					and likewise my research is heavily inspired by the brain. <br/>
 					Additionally, I love to study psychology, comparative myth, and philosophy,<br/>
 					and I personally enjoy film making, creative writing, and the outdoors.<br/>
